--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
 
 
   smoke-tests:
-    name: "Build and smoke test (${{ matrix.os }} | Python ${{ matrix.python-version }}) (Release=${{ matrix.should-release }})"
+    name: "${{ matrix.os }} | Py ${{ matrix.python-version }} | Rel ${{ matrix.should-release }}"
     runs-on: ${{ matrix.os }}
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     timeout-minutes: 20
@@ -328,57 +328,39 @@ jobs:
         run: |
           .ci/display_logs.sh
 
-  build-test:
-    name: "Remote: Build & test MAPDL ${{ matrix.mapdl-version }} (Extended testing ${{ matrix.extended_testing }})"
+  build-test-remote-matrix:
+    name: "Build remote test matrix"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    needs: [smoke-tests]
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+
+    steps:
+      - name: "Install Git and checkout project"
+        uses: actions/checkout@v4.1.7
+
+      - uses: tspascoal/get-user-teams-membership@v3
+        id: is_organization_member
+        with:
+          username: ${{ github.actor }}
+          organization: ansys
+          team: 'pymapdl-developers'
+          GITHUB_TOKEN: ${{ secrets.TOKEN_TEAMS_USER_READ }}
+
+      - id: set-matrix
+        env:
+          extended_testing: ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
+          auth_user: ${{ steps.is_organization_member.outputs.isTeamMember == 'true' }}
+        run: .ci/build_matrix.sh
+
+  build-test-remote:
+    name: "Remote: ${{ matrix.mapdl-version }}"
+    runs-on: ubuntu-latest
+    needs: [smoke-tests, build-test-remote-matrix]
     timeout-minutes: 35
     strategy:
       fail-fast: false
-      matrix:
-        mapdl-version: [
-          'v22.2.1',
-          'v22.2-ubuntu',
-          'v23.1.0',
-          'v23.1-ubuntu',
-          'v23.2.0',
-          'v23.2-ubuntu',
-          'v24.1.0',
-          'v24.1-ubuntu',
-          'v24.1-ubuntu-student',
-          'v24.2.0',
-          'latest-ubuntu',
-          'latest-ubuntu-student',
-          ]
-        extended_testing:
-          - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
-        exclude:
-          # In PRs skipping all MAPDL version except student ones (commented out).
-          - extended_testing: false
-            mapdl-version: 'v22.2.1'
-          - extended_testing: false
-            mapdl-version: 'v22.2-ubuntu'
-          - extended_testing: false
-            mapdl-version: 'v23.1.0'
-          - extended_testing: false
-            mapdl-version: 'v23.1-ubuntu'
-          - extended_testing: false
-            mapdl-version: 'v23.2.0'
-          - extended_testing: false
-            mapdl-version: 'v23.2-ubuntu'
-          - extended_testing: false
-            mapdl-version: 'v24.1.0'
-          - extended_testing: false
-            mapdl-version: 'v24.1-ubuntu'
-          # - extended_testing: false
-          #   mapdl-version: 'v24.1-ubuntu-student'
-          - extended_testing: false
-            mapdl-version: 'v24.2.0'
-          - extended_testing: false
-            mapdl-version: 'latest-ubuntu'
-          # - extended_testing: false
-          #   mapdl-version: 'latest-ubuntu-student'
+      matrix: ${{ fromJson(needs.build-test-remote-matrix.outputs.matrix) }}
 
     env:
       PYMAPDL_PORT: 21000  # default won't work on GitHub runners
@@ -570,37 +552,48 @@ jobs:
         run: |
           .ci/display_logs.sh
 
-  build-test-ubuntu:
-    name: "Local: Build & test on Ubuntu MAPDL ${{ matrix.mapdl-image }} (Extended testing ${{ matrix.extended_testing }})"
+  build-test-local-minimal-matrix:
+    name: "Build test matrix for minimal and local"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    needs: [smoke-tests]
-    timeout-minutes: 55
     outputs:
-      pushed: ${{ steps.attatch-to-pr.outputs.pushed }}
-      committed: ${{ steps.attatch-to-pr.outputs.committed }}
-      commit_long_sha: ${{ steps.attatch-to-pr.outputs.commit_long_sha }}
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: "Install Git and checkout project"
+        uses: actions/checkout@v4.1.7
+
+      - uses: tspascoal/get-user-teams-membership@v3
+        id: is_organization_member
+        with:
+          username: ${{ github.actor }}
+          organization: ansys
+          team: 'pymapdl-developers'
+          GITHUB_TOKEN: ${{ secrets.TOKEN_TEAMS_USER_READ }}
+
+      - id: set-matrix
+        env:
+          ONLY_UBUNTU: true
+          LIMIT_VERSIONS: 3
+          ON_SCHEDULE: ${{ github.event_name == 'schedule' }}
+          ON_WORKFLOW_DISPATCH: ${{ github.event_name == 'workflow_dispatch' }}
+          RUN_ALL_TEST: ${{ inputs.run_all_tests }}
+          ON_PUSH: ${{ github.event_name == 'push' }}
+          HAS_TAG: ${{ contains(github.ref, 'refs/tags') }}
+          auth_user: ${{ steps.is_organization_member.outputs.isTeamMember == 'true' }}
+        run: .ci/build_matrix.sh
+
+  build-test-ubuntu-local:
+    name: "Local: ${{ matrix.mapdl-version }}"
+    runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    needs: [smoke-tests, build-test-local-minimal-matrix]
+    timeout-minutes: 55
     strategy:
       fail-fast: false
-      matrix:
-        mapdl-image: [
-          'v23.2-ubuntu', 
-          'v24.1-ubuntu', 
-          'v24.1-ubuntu-student',
-          'latest-ubuntu',
-          'latest-ubuntu-student',
-          ]
-        extended_testing:
-          - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
-        exclude:
-          - extended_testing: false
-            mapdl-image: 'v23.2-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'v24.1-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'latest-ubuntu'
+      matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
+
     container:
-      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
+      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-version }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
       credentials:
         username: ${{ github.actor }}
@@ -662,7 +655,7 @@ jobs:
           xvfb-run pytest -k "not test_dpf" \
             ${{ env.PYTEST_ARGUMENTS }} \
             --reset_only_failed --add_missing_images \
-            --cov-report=xml:${{ matrix.mapdl-image }}-local.xml
+            --cov-report=xml:${{ matrix.mapdl-version }}-local.xml
 
       - name: "Adding the directory as safe directory for later step"
         run: |
@@ -699,43 +692,27 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # required
           root_dir: ${{ github.workspace }}
-          name: ${{ matrix.mapdl-image }}-local.xml
-          flags: ubuntu,local,${{ matrix.mapdl-image }}
+          name: ${{ matrix.mapdl-version }}-local.xml
+          flags: ubuntu,local,${{ matrix.mapdl-version }}
 
       - name: "Upload coverage artifacts"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.mapdl-image }}-local.xml
-          path: ./${{ matrix.mapdl-image }}-local.xml
+          name: ${{ matrix.mapdl-version }}-local.xml
+          path: ./${{ matrix.mapdl-version }}-local.xml
 
 
   build-test-ubuntu-minimal:
-    name: "Local: Build & test minimal setup on Ubuntu MAPDL ${{ matrix.mapdl-image }} (Extended testing ${{ matrix.extended_testing }})"
+    name: "Local-min: ${{ matrix.mapdl-version }}"
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    needs: [smoke-tests]
+    needs: [smoke-tests, build-test-local-minimal-matrix]
     timeout-minutes: 55
     strategy:
       fail-fast: false
-      matrix:
-        mapdl-image: [
-          'v23.2-ubuntu',
-          'v24.1-ubuntu',
-          'v24.1-ubuntu-student',
-          'latest-ubuntu',
-          'latest-ubuntu-student',
-          ]
-        extended_testing:
-          - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
-        exclude:
-          - extended_testing: false
-            mapdl-image: 'v23.2-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'v24.1-ubuntu'
-          - extended_testing: false
-            mapdl-image: 'latest-ubuntu'
+      matrix: ${{fromJson(needs.build-test-local-minimal-matrix.outputs.matrix)}}
     container:
-      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
+      image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-version }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
       credentials:
         username: ${{ github.actor }}
@@ -784,10 +761,10 @@ jobs:
           # Because there is no 'ansys-tools-path' we need to input the
           # executable path with the env var: PYMAPDL_MAPDL_EXEC.
 
-          if [[ "${{ matrix.mapdl-image }}" == *"latest-ubuntu"* ]] ; then
+          if [[ "${{ matrix.mapdl-version }}" == *"latest-ubuntu"* ]] ; then
             version="242"
           else
-            version=$(echo "${{ matrix.mapdl-image }}" | head -c 5 | tail -c 4 | tr -d '.')
+            version=$(echo "${{ matrix.mapdl-version }}" | head -c 5 | tail -c 4 | tr -d '.')
           fi;
 
           echo "$version"
@@ -798,21 +775,21 @@ jobs:
           unset PYMAPDL_START_INSTANCE
           pytest -k "not test_dpf" \
             ${{ env.PYTEST_ARGUMENTS }} \
-            --cov-report=xml:${{ matrix.mapdl-image }}-minimal.xml
+            --cov-report=xml:${{ matrix.mapdl-version }}-minimal.xml
 
       - uses: codecov/codecov-action@v4
         name: "Upload coverage to Codecov"
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # required
           root_dir: ${{ github.workspace }}
-          name: ${{ matrix.mapdl-image }}-minimal.xml
-          flags: ubuntu,local,${{ matrix.mapdl-image }},minimal
+          name: ${{ matrix.mapdl-version }}-minimal.xml
+          flags: ubuntu,local,${{ matrix.mapdl-version }},minimal
 
       - name: "Upload coverage artifacts"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.mapdl-image }}-minimal.xml
-          path: ./${{ matrix.mapdl-image }}-minimal.xml
+          name: ${{ matrix.mapdl-version }}-minimal.xml
+          path: ./${{ matrix.mapdl-version }}-minimal.xml
 
 
   test-windows:
@@ -889,7 +866,7 @@ jobs:
 
   package:
     name: "Package library"
-    needs: [build-test, build-test-ubuntu, build-test-ubuntu-minimal, docs-build]
+    needs: [build-test-remote, build-test-ubuntu-local, build-test-ubuntu-minimal, docs-build]
     runs-on: ubuntu-latest
     steps:
       - name: "Build library source and wheel artifacts"
@@ -1001,7 +978,7 @@ jobs:
 
   notify:
     name: "Notify failed build"
-    needs: [smoke-tests, docs-build, build-test, build-test-ubuntu, build-test-ubuntu-minimal]
+    needs: [smoke-tests, docs-build, build-test-remote, build-test-ubuntu-local, build-test-ubuntu-minimal]
     if: failure() && github.event_name == 'schedule'
     runs-on: ubuntu-latest
     steps:
@@ -1014,7 +991,7 @@ jobs:
 
 
   test_julia:
-    name: "Test julia implementation"
+    name: "Julia ${{ matrix.julia-version }} | ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
     if: github.ref != 'refs/heads/main' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     strategy:
