--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ doc = [
     "sphinx-copybutton==0.5.2",
     "sphinx-design==0.6.1",
     "sphinx-gallery==0.17.1",
+    "sphinx-jinja==2.0.2",
     "sphinx-notfound-page==1.0.4",
     "sphinx==8.0.2",
     "sphinxcontrib-websupport==2.0.0",
